--- a/glacium/templates/FENSAP.DROP3D.files.j2
+++ b/glacium/templates/FENSAP.DROP3D.files.j2
@@ -15,7 +15,7 @@
 # Unit Filename  (format (I2,1X,A))
 # ---------------------------------
 
-  8  {{ FSP_FILES_GRID }}
+  8  {{ GLB_FILE_GRID }}
   9   grid.solid
 10 drop3d.par
 11 out
